--- a/src/kOS.Safe/kOS.Safe.csproj
+++ b/src/kOS.Safe/kOS.Safe.csproj
@@ -136,6 +136,7 @@
     <Compile Include="SharedObjects.cs" />
     <Compile Include="UpdateHandler.cs" />
     <Compile Include="Utilities\Debug.cs" />
+    <Compile Include="Utilities\EnumUtilities.cs" />
     <Compile Include="Utilities\Environment.cs" />
     <Compile Include="Utilities\Flushable.cs" />
     <Compile Include="Utilities\kOSKeys.cs" />
