rename Opcode to match the class's case
also fixes a compilation problem on linux
also reverts commit 659bb11bb26b63f4b88ab945babde3c94ffa4f9f.

--- a/src/kOS.Safe/kOS.Safe.csproj
+++ b/src/kOS.Safe/kOS.Safe.csproj
@@ -59,7 +59,7 @@
     <Compile Include="Compilation\KS\SubprogramCollection.cs" />
     <Compile Include="Compilation\KS\Trigger.cs" />
     <Compile Include="Compilation\KS\TriggerCollection.cs" />
-    <Compile Include="Compilation\OpCode.cs" />
+    <Compile Include="Compilation\Opcode.cs" />
     <Compile Include="Compilation\ProgramBuilder.cs" />
     <Compile Include="Compilation\ProgramBuilderInterpreter.cs" />
     <Compile Include="Compilation\PseudoNull.cs" />
