--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Suffixed\SingleResourceValue.cs" />
     <Compile Include="Suffixed\StageValues.cs" />
     <Compile Include="Suffixed\VectorRenderer.cs" />
+    <Compile Include="Suffixed\WaypointValue.cs" />
     <Compile Include="Utilities\BetaShim.cs" />
     <Compile Include="Utilities\PartUtilities.cs" />
     <Compile Include="Utilities\SteeringHelper.cs" />
