telnet Input side done, output side not done.

--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -133,6 +133,11 @@
     <Compile Include="UserIO\TelnetMainServer.cs" />
     <Compile Include="UserIO\TelnetSingletonServer.cs" />
     <Compile Include="UserIO\TelnetWelcomeMenu.cs" />
+    <Compile Include="UserIO\TerminalAnsiMapper.cs" />
+    <Compile Include="UserIO\TerminalUnicodeMapper.cs" />
+    <Compile Include="UserIO\TerminalVT100Mapper.cs" />
+    <Compile Include="UserIO\TerminalXtermMapper.cs" />
+    <Compile Include="UserIO\UnicodeCommand.cs" />
     <Compile Include="Utilities\BetaShim.cs" />
     <Compile Include="Utilities\PartUtilities.cs" />
     <Compile Include="Utilities\SteeringHelper.cs" />
