hard stuff done.  just need docs and opt-in warn.
Here is my current checklist state as of this commit:

Telnet TODO:
- [done] bridge between (threaded) socket code and (unthreaded) Unity, via putting chars into input and output queues.
- [done] Welcome menu that is a Unity Monobehavior and proves the above works.
- [done] Get attached to a kOC CPU from the Welcome menu.
- [done] Able to detach from kOS CPU and return to Welcome menu.
- [done] Resize from client to server.
- [done] Resize from server to client.
- [done] Input: simple ascii.
- [done] Terminal Make & Model abstraction infrastructure, input side.
- [done-ish] Terminal Make & Model abstraction infrastructure, output side.
- [done] Input fancy chars, VT100 / XTERM only for now.
- [done] Display telnet connection status in main GUI Terminal window's lower area (icon, count of how many).
- Disconnect telnet on these activities - try to give different messages for why:
    - [done] CPU poweroff. (effect was interesting - terminal stays connected but nothing happens when you type.  I think that's actually appropriate.)
    - [done] CPU part destructed because of scene switch.
    - [done] Camera moves too far from CPU so the CPU unloads from memory.
    - [done] CPU part destructed because of lithobreaking or thermal exhuberance.
- [goodenough] output "diffing" system. (still could be made more efficient but it works)
- [not my fault] PageUp and PageDn seem to leave the terminal messed up.  Fix it.  (update: I now think this problem always was there.  If you page-up and then page-down a few times, it ends up putting the cursor in the middle of your scrollback buffer when you type instead of teleporting you down to the bottom where the cursor belongs.  This happens in GUI mode too and should be a separate issue.
- [done] Telnet status visible on applauncher control panel.
- [done] Allow non-loopback connection (with opt-in only)
- [done] Get it working with a passive-mode telnet client. (all my early testing 

--- a/src/kOS.Safe/kOS.Safe.csproj
+++ b/src/kOS.Safe/kOS.Safe.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Utilities\Flushable.cs" />
     <Compile Include="Utilities\kOSKeys.cs" />
     <Compile Include="Utilities\Math.cs" />
+    <Compile Include="Utilities\TickGen.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Compilation\CompiledObject-doc.md" />
