--- a/src/kOS.Safe.Test/kOS.Safe.Test.csproj
+++ b/src/kOS.Safe.Test/kOS.Safe.Test.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClampSetSuffixTest.cs" />
     <Compile Include="ListValueTest.cs" />
     <Compile Include="NoArgsSuffixTest.cs" />
     <Compile Include="SetSuffixTest.cs" />
