--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Factories\StandardFactory.cs" />
     <Compile Include="Function\BuildList.cs" />
     <Compile Include="Function\FunctionManager.cs" />
+    <Compile Include="Function\HighlightStructure.cs" />
     <Compile Include="Function\Math.cs" />
     <Compile Include="Function\Misc.cs" />
     <Compile Include="Function\Persistence.cs" />
