Moved all KAC related files to Addons/KAC
Created Monobehaviour for Handling KAC events. For now it just writes
to log on each KAC state change.

--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -157,8 +157,9 @@
     <Compile Include="Utilities\VesselUtils.cs" />
     <Compile Include="Suffixed\OrbitableVelocity.cs" />
     <Compile Include="AddOns\KAC\KACWrapper.cs" />
-    <Compile Include="Function\KAC.cs" />
-    <Compile Include="Suffixed\KACAlarmWrapper.cs" />
+    <Compile Include="AddOns\KAC\KACAlarmWrapper.cs" />
+    <Compile Include="AddOns\KAC\KACFunctions.cs" />
+    <Compile Include="AddOns\KAC\KACEventHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\kOS.Safe\kOS.Safe.csproj">
