--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -156,11 +156,11 @@
     <Compile Include="Suffixed\VesselTarget.cs" />
     <Compile Include="Utilities\VesselUtils.cs" />
     <Compile Include="Suffixed\OrbitableVelocity.cs" />
-    <Compile Include="AddOns\KAC\KACWrapper.cs" />
-    <Compile Include="AddOns\KAC\KACAlarmWrapper.cs" />
-    <Compile Include="AddOns\KAC\KACFunctions.cs" />
-    <Compile Include="AddOns\KAC\KACEventHandler.cs" />
     <Compile Include="Suffixed\Addons.cs" />
+    <Compile Include="AddOns\KerbalAlarmClock\KACWrapper.cs" />
+    <Compile Include="AddOns\KerbalAlarmClock\KACAlarmWrapper.cs" />
+    <Compile Include="AddOns\KerbalAlarmClock\KACFunctions.cs" />
+    <Compile Include="AddOns\KerbalAlarmClock\KACEventHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\kOS.Safe\kOS.Safe.csproj">
@@ -188,6 +188,6 @@
   </Target>
   -->
   <ItemGroup>
-    <Folder Include="AddOns\KAC\" />
+    <Folder Include="AddOns\KerbalAlarmClock\" />
   </ItemGroup>
 </Project>
