moved in tech tree and increased mass

--- a/Resources/GameData/kOS/Parts/kOSMachineRad/part.cfg
+++ b/Resources/GameData/kOS/Parts/kOSMachineRad/part.cfg
@@ -15,7 +15,7 @@ iconCenter = 0, 0, 0
 node_attach = 0.0, 0.0, 0.0, 1, 0, 0
 
 // --- Tech tree ---
-TechRequired = flightControl
+TechRequired = unmannedTech
 
 // --- editor parameters ---
 cost = 2200
@@ -30,7 +30,7 @@ description = Would you trust life and limb to a mindless autopilot, powered by 
 attachRules = 0,1,0,0,1
 
 // --- standard part parameters ---
-mass = 0.00001
+mass = 0.03
 dragModelType = default
 maximum_drag = 0.0
 minimum_drag = 0.0
