READY?! Please everyone give it a go.
- Renamed methods talking about locks so they say UserFunction
- Tested last cases: recursion, calling a library of methods.
- Refactored built-in calls to use $<argstart> now, and return dummy returns.
- Added some test scripts to kerboscript_tests/user_functions

See the test scripts in the PR (kerboscrit_test/user_functions)
to get a feel for what the new feature does
and how you use it.

What I'd really like people to do is regression test it by running
it on their old scripts - try it out on scripts that you knew worked
in the past to ensure they still work now.

One difference I see is that it has enlarged the size of the kRisc
code to such a degree that now KSM files are no longer smaller than
their KS sources.  I'm not sure how much I still care about this
given that we'll be making the limits bigger soon anyway.

--- a/src/kOS.Safe/kOS.Safe.csproj
+++ b/src/kOS.Safe/kOS.Safe.csproj
@@ -52,9 +52,9 @@
     <Compile Include="Compilation\KS\Scope.cs" />
     <Compile Include="Compilation\KS\Subprogram.cs" />
     <Compile Include="Compilation\KS\KSScript.cs" />
-    <Compile Include="Compilation\KS\Lock.cs" />
-    <Compile Include="Compilation\KS\LockCollection.cs" />
-    <Compile Include="Compilation\KS\LockFunction.cs" />
+    <Compile Include="Compilation\KS\UserFunction.cs" />
+    <Compile Include="Compilation\KS\UserFunctionCollection.cs" />
+    <Compile Include="Compilation\KS\UserFunctionCodeFragment.cs" />
     <Compile Include="Compilation\KS\Parser.cs" />
     <Compile Include="Compilation\KS\ParseTree.cs" />
     <Compile Include="Compilation\KS\Scanner.cs" />
