--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -54,6 +54,11 @@
   <ItemGroup>
     <Compile Include="AddOns\ActionGroupsExtended\ActionGroupsExtendedAPI.cs" />
     <Compile Include="AddOns\ActionGroupsExtended\ActionGroupsExtendedBinding.cs" />
+    <Compile Include="AddOns\InfernalRobotics\IRControlGroup.cs" />
+    <Compile Include="AddOns\InfernalRobotics\IRFunctions.cs" />
+    <Compile Include="AddOns\InfernalRobotics\IRHandler.cs" />
+    <Compile Include="AddOns\InfernalRobotics\IRServoWrapper.cs" />
+    <Compile Include="AddOns\InfernalRobotics\IRWrapper.cs" />
     <Compile Include="AddOns\RemoteTech\IRemoteTechAPIv1.cs" />
     <Compile Include="AddOns\RemoteTech\RemoteTechAPI.cs" />
     <Compile Include="AddOns\RemoteTech\RemoteTechArchive.cs" />
