AddonList and Addon refactor + minor doc changes.
Made Addon class abstract and now require each AddOn create its own
child of kOS.Suffixed.Addon implementing at least Available suffix, but
each child may implement other suffixes as demonstrated in the code.

--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -165,6 +165,9 @@
     <Compile Include="AddOns\KerbalAlarmClock\KACEventHandler.cs" />
     <Compile Include="Suffixed\AddonList.cs" />
     <Compile Include="Suffixed\Addon.cs" />
+    <Compile Include="AddOns\RemoteTech\Addon.cs" />
+    <Compile Include="AddOns\KerbalAlarmClock\Addon.cs" />
+    <Compile Include="AddOns\ActionGroupsExtended\Addon.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\kOS.Safe\kOS.Safe.csproj">
