Final touches + docs

--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -52,7 +52,6 @@
     <Compile Include="AddOns\ActionGroupsExtended\ActionGroupsExtendedAPI.cs" />
     <Compile Include="AddOns\ActionGroupsExtended\ActionGroupsExtendedBinding.cs" />
     <Compile Include="AddOns\InfernalRobotics\IRControlGroup.cs" />
-    <Compile Include="AddOns\InfernalRobotics\IRFunctions.cs" />
     <Compile Include="AddOns\InfernalRobotics\IRHandler.cs" />
     <Compile Include="AddOns\InfernalRobotics\IRServoWrapper.cs" />
     <Compile Include="AddOns\InfernalRobotics\IRWrapper.cs" />
@@ -173,6 +172,7 @@
     <Compile Include="AddOns\RemoteTech\Addon.cs" />
     <Compile Include="AddOns\KerbalAlarmClock\Addon.cs" />
     <Compile Include="AddOns\ActionGroupsExtended\Addon.cs" />
+    <Compile Include="AddOns\InfernalRobotics\Addon.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\kOS.Safe\kOS.Safe.csproj">
