Fixes #925 and changes how lowercasing gets done.
Also required moving how ALT:APOAPSIS and ETA:APOAPSIS
type strings work.

Technically, ALT and ETA are not objects which should mean
they get documented, but as their purpose was to refactor the old
code to keep working... that documentation isn't vital and can
be a separate issue for later.

--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -93,6 +93,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Suffixed\Alt.cs" />
+    <Compile Include="Suffixed\Eta.cs" />
     <Compile Include="Suffixed\HsvColor.cs" />
     <Compile Include="Suffixed\ResourceTransferValue.cs" />
     <Compile Include="Screen\DelegateDialog.cs" />
