--- a/src/kOS.Safe.Test/kOS.Safe.Test.csproj
+++ b/src/kOS.Safe.Test/kOS.Safe.Test.csproj
@@ -49,6 +49,8 @@
     <Compile Include="LexiconTest.cs" />
     <Compile Include="ListValueTest.cs" />
     <Compile Include="NoArgsSuffixTest.cs" />
+    <Compile Include="Opcode\FakeCpu.cs" />
+    <Compile Include="Opcode\OpcodeSetIndexTest.cs" />
     <Compile Include="SetSuffixTest.cs" />
     <Compile Include="StructureSuffixIntegrationTest.cs" />
     <Compile Include="StructureTest.cs" />
